<resources>
    <string name="app_name">MyTime</string>
    <string name="welcome_to_mytime">Welcome to MyTime!</string>

    <string name="Agenda">Agenda</string>
    <string name="Class">Class</string>
    <string name="Tasks">Tasks</string>
    <string name="Task">Task</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Bug">Bug</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="hello_agenda_fragment">AGENDA</string>
    <string name="hello_class_fragment">CLASS</string>
    <string name="hello_tasks_fragment">TASKS</string>
    <string name="hello_settings_fragment">SETTINGS</string>
    <string name="hello_about_fragment">ABOUT</string>
    <string name="hello_bug_fragment">BUG</string>

    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>

    <string name="no_events">No Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
